# CommonRoadCXXPort

./: .gitignore  CMakeLists.txt  README.md  rebuild.sh
PYTHON/: CHANGELOG.md  README.md
PYTHON/config/: steering.yaml
PYTHON/scripts/: export_oversteer_understeer_ST.py  pygame_vehicle_tester.py  test_vehicle.py
PYTHON/unit_tests/: test_brake_controller.py  test_derivatives.py  test_final_accel_controller.py  test_steering_control.py  test_stop_and_go.py  test_zeroInitialVelocity.py
PYTHON/vehiclemodels/config/low_speed_safety/: default.yaml  vehicle2.yaml
PYTHON/vehiclemodels/sim/: __init__.py  low_speed_safety.py  simulator.py
PYTHON/vehiclemodels/sim/actuators/: aero.py  brake.py  powertrain.py  rolling_resistance.py
PYTHON/vehiclemodels/sim/controllers/: __init__.py  final_accel_controller.py  steering.py
app/: main.cpp
config/: loss_of_control_detector.yaml  low_speed_safety_mb.yaml  low_speed_safety_std.yaml  steering.yaml
examples/: basic_sim_daemon.cpp  drift_mode_demo.cpp
include/sim/: low_speed_safety.hpp  low_speed_safety_loader.hpp  model_timing.hpp  vehicle_simulator.hpp
include/sim/longitudinal/: aero.hpp  brake.hpp  config_loader.hpp  final_accel_controller.hpp  powertrain.hpp  rolling_resistance.hpp
include/utils/: acceleration_constraints.hpp  longitudinal_parameters.hpp  steering_constraints.hpp  steering_controller.hpp  steering_parameters.hpp  tireParameters.hpp  tire_model.hpp  trailer_parameters.hpp  unitConversion.hpp  vehicle_dynamics_ks_cog.hpp
include/vehiclemodels/: init_ks.hpp  init_kst.hpp  init_mb.hpp  init_st.hpp  init_std.hpp  vehicle_dynamics_ks.hpp  vehicle_dynamics_kst.hpp  vehicle_dynamics_linearized.hpp  vehicle_dynamics_mb.hpp  vehicle_dynamics_st.hpp  vehicle_dynamics_std.hpp
lib/common/: logging.hpp
lib/controllers/: steering_controller.cpp  steering_controller.hpp
lib/controllers/longitudinal/: aero.cpp  aero.hpp  brake.cpp  brake.hpp  config_loader.cpp  config_loader.hpp  final_accel_controller.cpp  final_accel_controller.hpp  powertrain.cpp  powertrain.hpp  rolling_resistance.cpp  rolling_resistance.hpp
lib/io/: config_manager.cpp  config_manager.hpp  low_speed_safety_loader.cpp  low_speed_safety_loader.hpp
lib/models/: acceleration_constraints.cpp  acceleration_constraints.hpp  longitudinal_parameters.cpp  steering_constraints.cpp  steering_constraints.hpp  steering_parameters.cpp  tireParameters.cpp  trailer_parameters.cpp  unitConversion.cpp  unitConversion.hpp
lib/models/vehiclemodels/: init_ks.hpp  init_kst.hpp  vehicle_dynamics_ks.hpp  vehicle_dynamics_kst.hpp  vehicle_dynamics_linearized.hpp
lib/models/vehiclemodels/src/: init_ks.cpp  init_kst.cpp  init_mb.cpp  init_st.cpp  init_std.cpp  vehicle_dynamics_ks.cpp  vehicle_dynamics_kst.cpp  vehicle_dynamics_linearized.cpp  vehicle_dynamics_mb.cpp  vehicle_dynamics_st.cpp  vehicle_dynamics_std.cpp
lib/simulation/: low_speed_safety.cpp  low_speed_safety.hpp  model_timing.hpp  simulation_daemon.cpp  simulation_daemon.hpp  user_input.hpp  vehicle_simulator.cpp
lib/telemetry/: telemetry.cpp  telemetry.hpp  telemetry_imgui.hpp
parameters/: vehicle_parameters.cpp  vehicle_parameters.hpp
parameters/vehicle/: parameters_vehicle1.hpp  parameters_vehicle2.hpp  parameters_vehicle3.hpp  parameters_vehicle4.hpp
reports/: low_speed_launch_bug.md
src/sim/: low_speed_safety.cpp  low_speed_safety_loader.cpp  vehicle_simulator.cpp
src/sim/actuators/: aero.cpp  brake.cpp  powertrain.cpp  rolling_resistance.cpp
src/sim/controllers/: final_accel_controller.cpp
src/sim/longitudinal/: config_loader.cpp
src/utils/: acceleration_constraints.cpp  longitudinal_parameters.cpp  steering_constraints.cpp  steering_controller.cpp  steering_parameters.cpp  tireParameters.cpp  tire_model.cpp  trailer_parameters.cpp  unitConversion.cpp  vehicle_dynamics_ks_cog.cpp
src/vehiclemodels/: init_ks.cpp  init_kst.cpp  init_mb.cpp  init_st.cpp  init_std.cpp  vehicle_dynamics_ks.cpp  vehicle_dynamics_kst.cpp  vehicle_dynamics_linearized.cpp  vehicle_dynamics_mb.cpp  vehicle_dynamics_st.cpp  vehicle_dynamics_std.cpp
tests/: SCENARIO_NOTES.md  compare_vehicle_outputs.py  generate_zero_reference.py  python_scenario_runner.py  scenario_simulator.cpp  test_config_manager.cpp  test_derivatives.cpp  test_drift_brake_settle.cpp  test_header_modules.cpp  test_init_ks_kst.cpp  test_init_mb.cpp  test_init_std.cpp  test_longitudinal.cpp  test_loss_of_control_detector.cpp  test_low_speed_safety.cpp  test_public_api_no_gears.cpp  test_scenario_consistency.py  test_simulation_daemon.cpp  test_steering_controller.cpp  test_telemetry_drift_metrics.cpp  test_telemetry_drift_toggle.cpp  test_telemetry_population.cpp  test_timestep_bounds.cpp  test_vehicle.cpp  test_zeroInitialVelocity.cpp
tests/data/: generate_single_track_trace.py  single_track_trace.csv
tests/output/: oversteer_understeer_ST_cpp.csv  oversteer_understeer_ST_python.csv  zero_input_reference.csv
web-sdk/io/: ConfigManager.ts
web-sdk/simulation/: SimulationDaemon.ts  backend.ts  jsBackend.ts  nativeFactory.ts
web-sdk/tools/: compareNative.ts
